SERVER-7246 external user authentication should use primary preferred read pref