src/mongo/db/auth/auth_external_state_s.cpp
@@ -49,9 +49,11 @@ namespace mongo {
     }
 
     bool AuthExternalStateMongos::_findUser(const string& usersNamespace,
-                                            const BSONObj& query,
+                                            const BSONObj& queryDoc,
                                             BSONObj* result) const {
         scoped_ptr<ScopedDbConnection> conn(getConnectionForUsersCollection(usersNamespace));
+        Query query(queryDoc);
+        query.readPref(ReadPreference_PrimaryPreferred, BSONArray());
         *result = conn->get()->findOne(usersNamespace, query).getOwned();
         conn->done();
         return !result->isEmpty();
